fix(config): resolve NPE during server startup in livesAction config
- Replace List.of with Arrays.asList in InRPConfig.LIVES_ACTION

- Prevent NullPointerException when NeoForge validates uninitialized configs with null

- Add regression unit test and prevent server crash during startup